some examples are added